tests/fixtures/valid/control_flujo.syn
#lang: es

funcion test(x: int) -> nulo:
    si x > 0:
        log("pos")
    sino:
        log("neg")
