tests/fixtures/invalid/tortura_tipos.syn
#lang: es
funcion principal() -> nulo:
    a = "hola" + 10
    log("fin")
